@@ -6,24 +6,27 @@ import ru.yandex.practicum.filmorate.model.Film;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.stream.Collectors;
 
 @Component
 public class InMemoryFilmStorage implements FilmStorage {
     private final Map<Long, Film> films = new HashMap<>();
     private final AtomicLong nextId = new AtomicLong(1);
-    private final Map<Long, Set<Long>> filmLikes = new HashMap<>();
+    private final Map<Long, Set<Long>> likes = new HashMap<>();
 
     @Override
     public Film create(Film film) {
         film.setId(nextId.getAndIncrement());
         films.put(film.getId(), film);
-        filmLikes.put(film.getId(), new HashSet<>());
+        likes.put(film.getId(), new HashSet<>());
         return film;
     }
 
@@ -56,29 +59,27 @@ public class InMemoryFilmStorage implements FilmStorage {
             throw new NotFoundException("Фильм с id = " + id + " не найден");
         }
         films.remove(id);
-        filmLikes.remove(id);
+        likes.remove(id);
     }
 
+    @Override
     public void addLike(Long filmId, Long userId) {
-        Film film = findById(filmId);
-        filmLikes.get(filmId).add(userId);
+        findById(filmId);
+        likes.get(filmId).add(userId);
     }
 
+    @Override
     public void removeLike(Long filmId, Long userId) {
-        Film film = findById(filmId);
-        filmLikes.get(filmId).remove(userId);
+        findById(filmId);
+        likes.get(filmId).remove(userId);
     }
 
+    @Override
     public List<Film> getPopular(int count) {
         return films.values().stream()
-                .sorted((f1, f2) -> Integer.compare(
-                        filmLikes.get(f2.getId()).size(),
-                        filmLikes.get(f1.getId()).size()))
+                .sorted(Comparator.comparingInt((Film f) ->
+                        likes.getOrDefault(f.getId(), Collections.emptySet()).size()).reversed())
                 .limit(count)
-                .toList();
-    }
-
-    public int getLikesCount(Long filmId) {
-        return filmLikes.getOrDefault(filmId, new HashSet<>()).size();
+                .collect(Collectors.toList());
     }
 }
